add new optional property to order body (products id)
