# openapi.yaml
@@ -1700,6 +1700,10 @@ paths:
                   type: integer
                 orderPaymentTypeId:
                   type: integer
+                productsId:
+                  type: array
+                  items:
+                    type: integer
       responses:
         "201":
           description: Order created.
